[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/theme.theme" type="Theme" id=1]
[ext_resource path="res://scripts/levels.gd" type="Script" id=2]
[ext_resource path="res://scripts/border.gd" type="Script" id=3]

[node name="Viewport" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )

[node name="Levels" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 1260.0
margin_bottom = 700.0
script = ExtResource( 2 )

[node name="NamesContainer" type="MarginContainer" parent="Levels"]
margin_right = 1240.0
margin_bottom = 59.0
script = ExtResource( 3 )

[node name="Names" type="HBoxContainer" parent="Levels/NamesContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1220.0
margin_bottom = 39.0

[node name="Previous" type="Button" parent="Levels/NamesContainer/Names"]
margin_right = 557.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "<--"
align = 0

[node name="Current" type="Button" parent="Levels/NamesContainer/Names"]
margin_left = 565.0
margin_right = 635.0
margin_bottom = 19.0
focus_neighbour_left = NodePath(".")
focus_neighbour_right = NodePath(".")
text = "CURRENT"

[node name="Next" type="Button" parent="Levels/NamesContainer/Names"]
margin_left = 643.0
margin_right = 1200.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "-->"
align = 2

[node name="Level" type="HBoxContainer" parent="Levels"]
margin_top = 67.0
margin_right = 1240.0
margin_bottom = 680.0
size_flags_vertical = 3

[node name="Left" type="MarginContainer" parent="Levels/Level"]
margin_right = 616.0
margin_bottom = 613.0
size_flags_horizontal = 3
script = ExtResource( 3 )

[node name="Code" type="Label" parent="Levels/Level/Left"]
margin_left = 20.0
margin_top = 20.0
margin_right = 596.0
margin_bottom = 593.0
size_flags_vertical = 3
text = "This is a description of the algorithm in plain English.

This explains the relevance of the algorithm in computer science.

def algorithm(parameter):
    return result"
autowrap = true

[node name="Right" type="VBoxContainer" parent="Levels/Level"]
margin_left = 624.0
margin_right = 1240.0
margin_bottom = 613.0
size_flags_horizontal = 3

[node name="Display" type="MarginContainer" parent="Levels/Level/Right"]
margin_right = 616.0
margin_bottom = 475.0
size_flags_vertical = 3
script = ExtResource( 3 )

[node name="TypesContainer" type="MarginContainer" parent="Levels/Level/Right/Display"]
visible = false
margin_left = 288.0
margin_top = 217.0
margin_right = 328.0
margin_bottom = 257.0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="Levels/Level/Right/Display"]
margin_left = 20.0
margin_top = 20.0
margin_right = 596.0
margin_bottom = 455.0

[node name="Info" type="HBoxContainer" parent="Levels/Level/Right"]
margin_top = 483.0
margin_right = 616.0
margin_bottom = 613.0

[node name="ControlsContainer" type="MarginContainer" parent="Levels/Level/Right/Info"]
margin_right = 405.0
margin_bottom = 130.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
script = ExtResource( 3 )

[node name="Controls" type="Label" parent="Levels/Level/Right/Info/ControlsContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 385.0
margin_bottom = 110.0
size_flags_vertical = 1
text = "These are the controls for the level."
autowrap = true

[node name="ScoresContainer" type="MarginContainer" parent="Levels/Level/Right/Info"]
margin_left = 413.0
margin_right = 616.0
margin_bottom = 130.0
size_flags_horizontal = 3
script = ExtResource( 3 )

[node name="Scores" type="VBoxContainer" parent="Levels/Level/Right/Info/ScoresContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 183.0
margin_bottom = 110.0

[node name="Header" type="HBoxContainer" parent="Levels/Level/Right/Info/ScoresContainer/Scores"]
margin_right = 163.0
margin_bottom = 19.0

[node name="Size" type="Label" parent="Levels/Level/Right/Info/ScoresContainer/Scores/Header"]
margin_right = 40.0
margin_bottom = 19.0
text = "SIZE"

[node name="Time" type="Label" parent="Levels/Level/Right/Info/ScoresContainer/Scores/Header"]
margin_left = 48.0
margin_right = 163.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "HIGH SCORE"
align = 2

[node name="Data" type="HBoxContainer" parent="Levels/Level/Right/Info/ScoresContainer/Scores"]
margin_top = 27.0
margin_right = 163.0
margin_bottom = 90.0

[node name="Sizes" type="Label" parent="Levels/Level/Right/Info/ScoresContainer/Scores/Data"]
margin_right = 20.0
margin_bottom = 63.0
text = "16
32
64"

[node name="Times" type="Label" parent="Levels/Level/Right/Info/ScoresContainer/Scores/Data"]
margin_left = 28.0
margin_right = 163.0
margin_bottom = 63.0
size_flags_horizontal = 3
text = "INF
INF
INF"
align = 2
uppercase = true

[node name="BigDisplay" type="MarginContainer" parent="Levels"]
visible = false
margin_top = 640.0
margin_right = 1240.0
margin_bottom = 680.0
size_flags_vertical = 3
script = ExtResource( 3 )

[node name="TypesContainer" type="MarginContainer" parent="Levels/BigDisplay"]
visible = false
margin_left = 600.0
margin_right = 640.0
margin_bottom = 40.0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="Levels/BigDisplay"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1220.0
margin_bottom = 20.0

[node name="Timer" type="Timer" parent="Levels"]

[connection signal="pressed" from="Levels/NamesContainer/Names/Previous" to="Levels" method="_on_Previous_pressed"]
[connection signal="pressed" from="Levels/NamesContainer/Names/Current" to="Levels" method="_on_Current_pressed"]
[connection signal="pressed" from="Levels/NamesContainer/Names/Next" to="Levels" method="_on_Next_pressed"]
[connection signal="timeout" from="Levels/Timer" to="Levels" method="_on_Timer_timeout"]
